Second_Step/data/extract_data_vpl/44/50/grade_comments.txt
-The compilation or preparation of execution has failed
Scores.java:28: error: ']' expected
        int[] podium = int[3];
                           ^
Scores.java:28: error: ';' expected
        int[] podium = int[3];
                            ^
2 errors
Not compiled
